Initial website design

--- a/index.html
+++ b/index.html
@@ -1,1 +1,255 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<!--
+Final Project for Avisha Kumar & Tyler Sherman
+ECE 5725: Embedded Operating Systems
+Spring 2020
+Cornell University
+Professor Joe Skovira
+Created: 04/18/2020
+Updated: 04/18/2020
+-->
+
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="referrer" content="origin">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Portfolio for Avisha &amp; Tyler's Final Project in ECE5725">
+  <meta name="keywords" content="Cornell, Engineering, ECE, Computer, Electrical, Raspberry Pi, servo, camera, Linux">
+  <meta name="author" content="Avisha Kumar, Tyler Sherman">
+  <title>Smart Home Security System</title>
+
+  <!-- Custom styles for this website -->
+  <link rel="stylesheet" href="website.css">
+  <!-- Custom fonts for this website -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+
+  <!--favicon support for all modern browsers / mobile devices-->
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="img/favicon/site.webmanifest">
+  <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#2d89ef">
+  <meta name="theme-color" content="#ffffff">
+</head>
+
+<body>
+  <!-- Sidebar/menu -->
+  <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
+    <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
+    <div class="w3-container">
+      <h3 class="w3-padding-small"><b>Smart Home<br>Security System</b></h3>
+      <div class="w3-quarter w3-margin-bottom">
+      </div>
+      <div class="w3-half w3-margin-bottom">
+        <img src="img/Cornell.png" style="width:100%">
+      </div>
+      <div class="w3-quarter w3-margin-bottom">
+      </div>
+    </div>
+    <div class="w3-bar-block">
+      <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
+      <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Showcase</a>
+      <a href="#introduction" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Introduction</a>
+      <a href="#objectives" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Project Objectives</a>
+      <a href="#design" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Design &amp; Testing</a>
+      <a href="#results" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Results</a>
+      <a href="#references" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">References</a>
+      <a href="#tables" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Tables</a>
+      <a target="_blank" href="https://github.com" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">GitHub</a>
+    </div>
+  </nav>
+
+  <!-- Top menu on small screens -->
+  <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
+    <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">&#9776;</a>
+    <span>Smart Home Security System</span>
+  </header>
+
+  <!-- Overlay effect when opening sidebar on small screens -->
+  <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+
+  <!-- !PAGE CONTENT! -->
+  <div class="w3-main" style="margin-left:340px;margin-right:40px">
+
+    <!-- Header -->
+    <div class="w3-container" style="margin-top:80px" id="showcase">
+      <h1 class="w3-jumbo"><b>Smart Home Security System</b></h1>
+      <h1 class="w3-xxxlarge w3-text-red"><b>ECE 5725 - Final Project</b></h1>
+      <h3 class="w3-xlarge w3-text-red"><b>Avisha Kumar &amp; Tyler Sherman</b></h3>
+      <h3 class="w3-xlarge w3-text-red"><b>Cornell University Spring 2020</b></h3>
+      <hr style="width:50px;border:5px solid red" class="w3-round">
+    </div>
+
+    <!-- Photo grid (modal) -->
+    <div class="w3-row-padding">
+      <div class="w3-half">
+        <img src="img/Test.jpeg" style="width:100%" alt="Concrete meets bricks">
+        <img src="img/Test2.jpeg" style="width:100%" alt="Light, white and tight scandinavian design">
+        <img src="img/Test2.jpeg" style="width:100%" alt="White walls with designer chairs">
+      </div>
+
+      <div class="w3-half">
+        <img src="img/Test.jpeg" style="width:100%" alt="Windows for the atrium">
+        <img src="img/Test2.jpeg" style="width:100%" alt="Bedroom and office in one space">
+        <img src="img/Test2.jpeg" style="width:100%" alt="Scandinavian design">
+      </div>
+    </div>
+
+    <!-- Introduction -->
+    <div class="w3-container" id="introduction" style="margin-top:75px">
+      <h1 class="w3-xxxlarge w3-text-red"><b>Introduction.</b></h1>
+      <hr style="width:50px;border:5px solid red" class="w3-round">
+      <p>We are a interior design service that focus on what's best for your home and what's best for you!</p>
+      <p>Some text about our services - what we do and what we offer. We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
+      incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </p>
+    </div>
+
+    <!-- The Team -->
+    <div class="w3-row-padding w3-grayscale">
+      <div class="w3-col m6 w3-margin-bottom">
+        <div class="w3-light-grey">
+          <img src="img/Tyler.jpeg" alt="Avisha" style="width:100%">
+          <div class="w3-container">
+            <h3>Avisha Kumar</h3>
+            <p class="w3-opacity">Engineer</p>
+            <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          </div>
+        </div>
+      </div>
+      <div class="w3-col m6 w3-margin-bottom">
+        <div class="w3-light-grey">
+          <img src="img/Tyler.jpeg" alt="Tyler" style="width:100%">
+          <div class="w3-container">
+            <h3>Tyler Sherman</h3>
+            <p class="w3-opacity">Engineer</p>
+            <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Objectives -->
+    <div class="w3-container" id="objectives" style="margin-top:75px">
+      <h1 class="w3-xxxlarge w3-text-red"><b>Project Objectives.</b></h1>
+      <hr style="width:50px;border:5px solid red" class="w3-round">
+      <p>We are a interior design service that focus on what's best for your home and what's best for you!</p>
+      <p>Some text about our services - what we do and what we offer. We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
+      incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </p>
+    </div>
+
+    <!-- Design & Testing -->
+    <div class="w3-container" id="design" style="margin-top:75px">
+      <h1 class="w3-xxxlarge w3-text-red"><b>Design &amp; Testing.</b></h1>
+      <hr style="width:50px;border:5px solid red" class="w3-round">
+      <p>We are a interior design service that focus on what's best for your home and what's best for you!</p>
+      <p>Some text about our services - what we do and what we offer. We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
+      incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </p>
+    </div>
+
+    <!-- Results -->
+    <div class="w3-container" id="results" style="margin-top:75px">
+      <h1 class="w3-xxxlarge w3-text-red"><b>Results.</b></h1>
+      <hr style="width:50px;border:5px solid red" class="w3-round">
+      <p>The best team in the world.</p>
+      <p>We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
+      incididunt ut labore et quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </p>
+      <p><b>Our designers are thoughtfully chosen</b>:</p>
+    </div>
+
+    <!-- References / Appendix -->
+    <div class="w3-container" id="references" style="margin-top:75px">
+      <h1 class="w3-xxxlarge w3-text-red"><b>References.</b></h1>
+      <hr style="width:50px;border:5px solid red" class="w3-round">
+      <p>The best team in the world.</p>
+      <p>We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
+      incididunt ut labore et quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </p>
+      <p><b>Our designers are thoughtfully chosen</b>:</p>
+    </div>
+
+    <!-- Tables -->
+    <div class="w3-container" id="tables" style="margin-top:75px">
+      <h1 class="w3-xxxlarge w3-text-red"><b>Tables.</b></h1>
+      <hr style="width:50px;border:5px solid red" class="w3-round">
+      <p>Some text our prices. Lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+    </div>
+
+    <div class="w3-row-padding">
+      <div class="w3-half w3-margin-bottom">
+        <ul class="w3-ul w3-light-grey w3-center">
+          <li class="w3-dark-grey w3-xlarge w3-padding-32">Basic</li>
+          <li class="w3-padding-16">Floorplanning</li>
+          <li class="w3-padding-16">10 hours support</li>
+          <li class="w3-padding-16">Photography</li>
+          <li class="w3-padding-16">20% furniture discount</li>
+          <li class="w3-padding-16">Good deals</li>
+          <li class="w3-padding-16">
+            <h2>$ 199</h2>
+            <span class="w3-opacity">per room</span>
+          </li>
+          <li class="w3-light-grey w3-padding-24">
+            <button class="w3-button w3-white w3-padding-large w3-hover-black">Sign Up</button>
+          </li>
+        </ul>
+      </div>
+
+      <div class="w3-half">
+        <ul class="w3-ul w3-light-grey w3-center">
+          <li class="w3-red w3-xlarge w3-padding-32">Pro</li>
+          <li class="w3-padding-16">Floorplanning</li>
+          <li class="w3-padding-16">50 hours support</li>
+          <li class="w3-padding-16">Photography</li>
+          <li class="w3-padding-16">50% furniture discount</li>
+          <li class="w3-padding-16">GREAT deals</li>
+          <li class="w3-padding-16">
+            <h2>$ 249</h2>
+            <span class="w3-opacity">per room</span>
+          </li>
+          <li class="w3-light-grey w3-padding-24">
+            <button class="w3-button w3-red w3-padding-large w3-hover-black">Sign Up</button>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+  <!-- End page content -->
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px">
+      <p class="w3-right">Copyright &copy; 2020, Avisha &amp; Tyler.
+      <br>Powered by
+      <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a>
+      </p>
+    </div>
+  </footer>
+
+  <script>
+  // Script to open sidebar
+  function w3_open() {
+    document.getElementById("mySidebar").style.display = "block";
+    document.getElementById("myOverlay").style.display = "block";
+  }
+  // Script to close sidebar
+  function w3_close() {
+    document.getElementById("mySidebar").style.display = "none";
+    document.getElementById("myOverlay").style.display = "none";
+  }
+  </script>
+
+</body>
+
+</html>
