Add Avisha's image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Spring 2020
 Cornell University
 Professor Joe Skovira
 Created: 04/18/2020
-Updated: 04/18/2020
+Updated: 04/19/2020
 -->
 
 <html lang="en">
@@ -113,7 +113,7 @@ Updated: 04/18/2020
     <div class="w3-row-padding w3-grayscale">
       <div class="w3-col m6 w3-margin-bottom">
         <div class="w3-light-grey">
-          <img src="img/Tyler.jpeg" alt="Avisha" style="width:100%">
+          <img src="img/Avisha.jpeg" alt="Avisha" style="width:100%">
           <div class="w3-container">
             <h3>Avisha Kumar</h3>
             <p class="w3-opacity">Engineer</p>
