Update sections & filler image

--- a/index.html
+++ b/index.html
@@ -52,13 +52,11 @@ Updated: 04/19/2020
     </div>
     <div class="w3-bar-block">
       <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
-      <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Showcase</a>
       <a href="#introduction" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Introduction</a>
       <a href="#objectives" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Project Objectives</a>
       <a href="#design" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Design &amp; Testing</a>
       <a href="#results" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Results</a>
       <a href="#references" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">References</a>
-      <a href="#tables" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Tables</a>
       <a target="_blank" href="https://github.com/TylerSSherman98/ECE5725-Final_Project" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">GitHub</a>
     </div>
   </nav>
@@ -76,27 +74,13 @@ Updated: 04/19/2020
   <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
     <!-- Header -->
-    <div class="w3-container" style="margin-top:80px" id="showcase">
+    <div class="w3-container" style="margin-top:80px">
       <h1 class="w3-jumbo"><b>Smart Home Security System</b></h1>
       <h1 class="w3-xxxlarge w3-text-red"><b>ECE 5725 - Final Project</b></h1>
       <h3 class="w3-xlarge w3-text-red"><b>Avisha Kumar &amp; Tyler Sherman</b></h3>
       <h3 class="w3-xlarge w3-text-red"><b>Cornell University Spring 2020</b></h3>
       <hr style="width:50px;border:5px solid red" class="w3-round">
-    </div>
-
-    <!-- Photo grid (modal) -->
-    <div class="w3-row-padding">
-      <div class="w3-half">
-        <img src="img/Test.jpeg" style="width:100%" alt="Concrete meets bricks">
-        <img src="img/Test2.jpeg" style="width:100%" alt="Light, white and tight scandinavian design">
-        <img src="img/Test2.jpeg" style="width:100%" alt="White walls with designer chairs">
-      </div>
-
-      <div class="w3-half">
-        <img src="img/Test.jpeg" style="width:100%" alt="Windows for the atrium">
-        <img src="img/Test2.jpeg" style="width:100%" alt="Bedroom and office in one space">
-        <img src="img/Test2.jpeg" style="width:100%" alt="Scandinavian design">
-      </div>
+      <img src="img/Test3.jpeg" style="width:100%">
     </div>
 
     <!-- Introduction -->
@@ -190,6 +174,23 @@ Updated: 04/19/2020
         <li>User communication </li>
         <li>Web interface</li>
       </ol>
+
+      <!-- Photo grid (modal) -->
+      <div class="w3-row-padding">
+        <div class="w3-half">
+          <img src="img/Test.jpeg" style="width:100%" alt="Concrete meets bricks">
+          <img src="img/Test2.jpeg" style="width:100%" alt="Light, white and tight scandinavian design">
+          <img src="img/Test2.jpeg" style="width:100%" alt="White walls with designer chairs">
+        </div>
+
+        <div class="w3-half">
+          <img src="img/Test.jpeg" style="width:100%" alt="Windows for the atrium">
+          <img src="img/Test2.jpeg" style="width:100%" alt="Bedroom and office in one space">
+          <img src="img/Test2.jpeg" style="width:100%" alt="Scandinavian design">
+        </div>
+      </div>
+
+
     </div>
 
     <!-- Design & Testing -->
@@ -257,51 +258,6 @@ Updated: 04/19/2020
       <p><b>Special thanks to Professor Joe Skovira and TAs Alex Hatzis, Caitlin
         Stanton, Canhui Yu and Sophie He!
       </b></p>
-    </div>
-
-    <!-- Tables -->
-    <div class="w3-container" id="tables" style="margin-top:75px">
-      <h1 class="w3-xxxlarge w3-text-red"><b>Tables.</b></h1>
-      <hr style="width:50px;border:5px solid red" class="w3-round">
-      <p>Some text our prices. Lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
-    </div>
-
-    <div class="w3-row-padding">
-      <div class="w3-half w3-margin-bottom">
-        <ul class="w3-ul w3-light-grey w3-center">
-          <li class="w3-dark-grey w3-xlarge w3-padding-32">Basic</li>
-          <li class="w3-padding-16">Floorplanning</li>
-          <li class="w3-padding-16">10 hours support</li>
-          <li class="w3-padding-16">Photography</li>
-          <li class="w3-padding-16">20% furniture discount</li>
-          <li class="w3-padding-16">Good deals</li>
-          <li class="w3-padding-16">
-            <h2>$ 199</h2>
-            <span class="w3-opacity">per room</span>
-          </li>
-          <li class="w3-light-grey w3-padding-24">
-            <button class="w3-button w3-white w3-padding-large w3-hover-black">Sign Up</button>
-          </li>
-        </ul>
-      </div>
-
-      <div class="w3-half">
-        <ul class="w3-ul w3-light-grey w3-center">
-          <li class="w3-red w3-xlarge w3-padding-32">Pro</li>
-          <li class="w3-padding-16">Floorplanning</li>
-          <li class="w3-padding-16">50 hours support</li>
-          <li class="w3-padding-16">Photography</li>
-          <li class="w3-padding-16">50% furniture discount</li>
-          <li class="w3-padding-16">GREAT deals</li>
-          <li class="w3-padding-16">
-            <h2>$ 249</h2>
-            <span class="w3-opacity">per room</span>
-          </li>
-          <li class="w3-light-grey w3-padding-24">
-            <button class="w3-button w3-red w3-padding-large w3-hover-black">Sign Up</button>
-          </li>
-        </ul>
-      </div>
     </div>
 
   <!-- End page content -->
