Added bill of materials

--- a/index.html
+++ b/index.html
@@ -202,6 +202,57 @@ Updated: 04/19/2020
       dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
       incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       </p>
+
+      <table class="w3-table-all">
+        <tr class="w3-red">
+          <th>Component</th>
+          <th class="w3-center">Vendor</th>
+          <th class="w3-center">Part Number</th>
+          <th class="w3-center">Cost</th>
+        </tr>
+        <tr>
+          <td>Raspberry Pi 3 Model B Rev 1.2</td>
+          <td class="w3-center">Adafruit</td>
+          <td class="w3-center"><a target="_blank" href="https://www.adafruit.com/product/3055">3055</a></td>
+          <td class="w3-center">-</td>
+        </tr>
+        <tr>
+          <td>piCobbler Expansion Cable</td>
+          <td class="w3-center">Adafruit</td>
+          <td class="w3-center"><a target="_blank" href="https://www.adafruit.com/product/914">914</a></td>
+          <td class="w3-center">-</td>
+        </tr>
+        <tr>
+          <td>16GB Micro SD Card</td>
+          <td class="w3-center">SanDisk</td>
+          <td class="w3-center">-</td>
+          <td class="w3-center">-</td>
+        </tr>
+        <tr>
+          <td>Raspberry Pi Camera Board v2 - 8 Megapixels</td>
+          <td class="w3-center">Adafruit</td>
+          <td class="w3-center"><a target="_blank" href="https://www.adafruit.com/product/3099">3099</a></td>
+          <td class="w3-center">-</td>
+        </tr>
+        <tr>
+          <td>Passive Infrared (PIR) Motion Sensor</td>
+          <td class="w3-center">DIYmall</td>
+          <td class="w3-center"><a target="_blank" href="https://www.amazon.com/DIYmall-HC-SR501-Motion-Infrared-Arduino/dp/B012ZZ4LPM">HC-SR501</a></td>
+          <td class="w3-center">-</td>
+        </tr>
+        <tr>
+          <td>Pan/Tilt/Roll Camera Mount</td>
+          <td class="w3-center">Fat Shark</td>
+          <td class="w3-center"><a target="_blank" href="https://www.fatshark.com/product/fsv1603-pantiltroll-camera-mount/">FSV1603</a></td>
+          <td class="w3-center">$59.99</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td class="w3-right"><b>Total Cost =</b></td>
+          <td class="w3-center"><b>$59.99</b></td>
+        </tr>
+      </table>
     </div>
 
     <!-- Results -->
