--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@ Updated: 04/19/2020
       incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       </p>
 
+      <h3 class="w3-large w3-text-red"><b>Bill of Materials (BOM).</b></h3>
       <table class="w3-table-all">
         <tr class="w3-red">
           <th>Component</th>
