Change directory structure

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Updated: 04/26/2020
   <title>Smart Home Security System</title>
 
   <!-- Custom styles for this website -->
-  <link rel="stylesheet" href="website.css">
+  <link rel="stylesheet" href="css/website.css">
   <!-- Custom fonts & icons for this website -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
   <script src="https://kit.fontawesome.com/ff39a724fe.js" crossorigin="anonymous"></script>
